--- a/nihar-blog/hugo.toml
+++ b/nihar-blog/hugo.toml
@@ -9,7 +9,7 @@ theme = "gokarna"
 
 [params]
   # URL for the avatar on homepage
-  avatarURL = "/images/nihar-pfp.jpg"
+  avatarURL = "/nihar-pfp.jpg"
 
   # Choose one of size-xs, size-s, size-m, size-l & size-xl. (Default: size-m)
   avatarSize = "size-m"
